--- a/documentation/namespaces/instagramapi-request.html
+++ b/documentation/namespaces/instagramapi-request.html
@@ -130,6 +130,8 @@
                 <dd>Functions related to Instagram Web.</dd>
                             <dt><a href="../classes/InstagramAPI-Request-Music.html"><abbr title="\InstagramAPI\Request\Music">Music</abbr></a></dt>
                 <dd>Functions related to music and lyrics.</dd>
+                            <dt><a href="../classes/InstagramAPI-Request-Reel.html"><abbr title="\InstagramAPI\Request\Reel">Reel</abbr></a></dt>
+                <dd>Functions related to Reels also known internally as clips.</dd>
             
                     </dl>
     
