--- a/documentation/namespaces/instagramapi-response.html
+++ b/documentation/namespaces/instagramapi-response.html
@@ -529,6 +529,8 @@
                 <dd>SendVerifyEmailResponse.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-MonetizationProductsEligibilityDataResponse.html"><abbr title="\InstagramAPI\Response\MonetizationProductsEligibilityDataResponse">MonetizationProductsEligibilityDataResponse</abbr></a></dt>
                 <dd>MonetizationProductsEligibilityDataResponse.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-UserReelsResponse.html"><abbr title="\InstagramAPI\Response\UserReelsResponse">UserReelsResponse</abbr></a></dt>
+                <dd>UserReelsResponse.</dd>
             
                     </dl>
     
