--- a/documentation/packages/default.html
+++ b/documentation/packages/default.html
@@ -1458,6 +1458,10 @@ because of too many requests. You must slow yourself down!</dd>
                 <dd>Clip.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-MonetizationProductsEligibilityDataResponse.html"><abbr title="\InstagramAPI\Response\MonetizationProductsEligibilityDataResponse">MonetizationProductsEligibilityDataResponse</abbr></a></dt>
                 <dd>MonetizationProductsEligibilityDataResponse.</dd>
+                            <dt><a href="../classes/InstagramAPI-Request-Reel.html"><abbr title="\InstagramAPI\Request\Reel">Reel</abbr></a></dt>
+                <dd>Functions related to Reels also known internally as clips.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-UserReelsResponse.html"><abbr title="\InstagramAPI\Response\UserReelsResponse">UserReelsResponse</abbr></a></dt>
+                <dd>UserReelsResponse.</dd>
             
                             <dt><a href="../classes/InstagramAPI-React-PersistentTrait.html"><abbr title="\InstagramAPI\React\PersistentTrait">PersistentTrait</abbr></a></dt>
                 <dd></dd>
