--- a/documentation/indices/files.html
+++ b/documentation/indices/files.html
@@ -99,6 +99,7 @@
                     <li><a href="../files/src-response-model-adsinfo.html"><abbr title="src/Response/Model/AdsInfo.php">AdsInfo.php</abbr></a></li>
                     <li><a href="../files/src-response-ageeligibilityresponse.html"><abbr title="src/Response/AgeEligibilityResponse.php">AgeEligibilityResponse.php</abbr></a></li>
                     <li><a href="../files/src-media-constraints-albumconstraints.html"><abbr title="src/Media/Constraints/AlbumConstraints.php">AlbumConstraints.php</abbr></a></li>
+                    <li><a href="../files/src-response-alluserseriesresponse.html"><abbr title="src/Response/AllUserSeriesResponse.php">AllUserSeriesResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-androidlinks.html"><abbr title="src/Response/Model/AndroidLinks.php">AndroidLinks.php</abbr></a></li>
                     <li><a href="../files/src-response-model-animatedmedia.html"><abbr title="src/Response/Model/AnimatedMedia.php">AnimatedMedia.php</abbr></a></li>
                     <li><a href="../files/src-response-model-animatedmediaimage.html"><abbr title="src/Response/Model/AnimatedMediaImage.php">AnimatedMediaImage.php</abbr></a></li>
@@ -229,6 +230,7 @@
                     <li><a href="../files/src-response-createcollectionresponse.html"><abbr title="src/Response/CreateCollectionResponse.php">CreateCollectionResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-createhighlightresponse.html"><abbr title="src/Response/CreateHighlightResponse.php">CreateHighlightResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-createliveresponse.html"><abbr title="src/Response/CreateLiveResponse.php">CreateLiveResponse.php</abbr></a></li>
+                    <li><a href="../files/src-response-createserieresponse.html"><abbr title="src/Response/CreateSerieResponse.php">CreateSerieResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-creative.html"><abbr title="src/Response/Model/Creative.php">Creative.php</abbr></a></li>
                     <li><a href="../files/src-request-creative.html"><abbr title="src/Request/Creative.php">Creative.php</abbr></a></li>
                 </ul>
@@ -346,6 +348,7 @@
                     <li><a href="../files/src-response-friendshipsshowmanyresponse.html"><abbr title="src/Response/FriendshipsShowManyResponse.php">FriendshipsShowManyResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-friendshipsshowresponse.html"><abbr title="src/Response/FriendshipsShowResponse.php">FriendshipsShowResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-fullitem.html"><abbr title="src/Response/Model/FullItem.php">FullItem.php</abbr></a></li>
+                    <li><a href="../files/src-response-fundraiserinforesponse.html"><abbr title="src/Response/FundraiserInfoResponse.php">FundraiserInfoResponse.php</abbr></a></li>
                 </ul>
                                     <h3>G</h3>
         <ul class="phpdocumentor-list">
@@ -354,6 +357,7 @@
                     <li><a href="../files/src-response-genericresponse.html"><abbr title="src/Response/GenericResponse.php">GenericResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-getcollectionslistresponse.html"><abbr title="src/Response/GetCollectionsListResponse.php">GetCollectionsListResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-getlyricsresponse.html"><abbr title="src/Response/GetLyricsResponse.php">GetLyricsResponse.php</abbr></a></li>
+                    <li><a href="../files/src-response-getpostlivethumbnailsresponse.html"><abbr title="src/Response/GetPostLiveThumbnailsResponse.php">GetPostLiveThumbnailsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-getviewablestatusesresponse.html"><abbr title="src/Response/GetViewableStatusesResponse.php">GetViewableStatusesResponse.php</abbr></a></li>
                     <li><a href="../files/src-devices-gooddevices.html"><abbr title="src/Devices/GoodDevices.php">GoodDevices.php</abbr></a></li>
                     <li><a href="../files/src-response-model-graphdata.html"><abbr title="src/Response/Model/GraphData.php">GraphData.php</abbr></a></li>
@@ -651,8 +655,8 @@
                     <li><a href="../files/src-response-model-sharedfollower.html"><abbr title="src/Response/Model/SharedFollower.php">SharedFollower.php</abbr></a></li>
                     <li><a href="../files/src-response-model-sharedfolloweraccountsinfo.html"><abbr title="src/Response/Model/SharedFollowerAccountsInfo.php">SharedFollowerAccountsInfo.php</abbr></a></li>
                     <li><a href="../files/src-response-sharedfollowersresponse.html"><abbr title="src/Response/SharedFollowersResponse.php">SharedFollowersResponse.php</abbr></a></li>
-                    <li><a href="../files/src-request-shopping.html"><abbr title="src/Request/Shopping.php">Shopping.php</abbr></a></li>
                     <li><a href="../files/src-response-model-shopping.html"><abbr title="src/Response/Model/Shopping.php">Shopping.php</abbr></a></li>
+                    <li><a href="../files/src-request-shopping.html"><abbr title="src/Request/Shopping.php">Shopping.php</abbr></a></li>
                     <li><a href="../files/src-response-model-shoppingtype.html"><abbr title="src/Response/Model/ShoppingType.php">ShoppingType.php</abbr></a></li>
                     <li><a href="../files/src-response-shouldrequireprofessionalaccountresponse.html"><abbr title="src/Response/ShouldRequireProfessionalAccountResponse.php">ShouldRequireProfessionalAccountResponse.php</abbr></a></li>
                     <li><a href="../files/src-signatures.html"><abbr title="src/Signatures.php">Signatures.php</abbr></a></li>
@@ -670,8 +674,8 @@
                     <li><a href="../files/src-settings-storageinterface.html"><abbr title="src/Settings/StorageInterface.php">StorageInterface.php</abbr></a></li>
                     <li><a href="../files/src-response-model-stories.html"><abbr title="src/Response/Model/Stories.php">Stories.php</abbr></a></li>
                     <li><a href="../files/src-response-model-storiesnetego.html"><abbr title="src/Response/Model/StoriesNetego.php">StoriesNetego.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-story.html"><abbr title="src/Response/Model/Story.php">Story.php</abbr></a></li>
                     <li><a href="../files/src-request-story.html"><abbr title="src/Request/Story.php">Story.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-story.html"><abbr title="src/Response/Model/Story.php">Story.php</abbr></a></li>
                     <li><a href="../files/src-response-storyanswersresponse.html"><abbr title="src/Response/StoryAnswersResponse.php">StoryAnswersResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-storyappattribution.html"><abbr title="src/Response/Model/StoryAppAttribution.php">StoryAppAttribution.php</abbr></a></li>
                     <li><a href="../files/src-response-storycharitiesresponse.html"><abbr title="src/Response/StoryCharitiesResponse.php">StoryCharitiesResponse.php</abbr></a></li>
@@ -788,8 +792,8 @@
                     <li><a href="../files/src-response-model-unpredictablekeys-userunpredictablecontainer.html"><abbr title="src/Response/Model/UnpredictableKeys/UserUnpredictableContainer.php">UserUnpredictableContainer.php</abbr></a></li>
                     <li><a href="../files/src-response-usernamesuggestionsresponse.html"><abbr title="src/Response/UsernameSuggestionsResponse.php">UsernameSuggestionsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-userslookupresponse.html"><abbr title="src/Response/UsersLookupResponse.php">UsersLookupResponse.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-usertag.html"><abbr title="src/Response/Model/Usertag.php">Usertag.php</abbr></a></li>
                     <li><a href="../files/src-request-usertag.html"><abbr title="src/Request/Usertag.php">Usertag.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-usertag.html"><abbr title="src/Response/Model/Usertag.php">Usertag.php</abbr></a></li>
                     <li><a href="../files/src-response-usertagsresponse.html"><abbr title="src/Response/UsertagsResponse.php">UsertagsResponse.php</abbr></a></li>
                     <li><a href="../files/src-utils.html"><abbr title="src/Utils.php">Utils.php</abbr></a></li>
                 </ul>
