--- a/documentation/namespaces/instagramapi-response.html
+++ b/documentation/namespaces/instagramapi-response.html
@@ -531,6 +531,14 @@
                 <dd>MonetizationProductsEligibilityDataResponse.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-UserReelsResponse.html"><abbr title="\InstagramAPI\Response\UserReelsResponse">UserReelsResponse</abbr></a></dt>
                 <dd>UserReelsResponse.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-AllUserSeriesResponse.html"><abbr title="\InstagramAPI\Response\AllUserSeriesResponse">AllUserSeriesResponse</abbr></a></dt>
+                <dd>AllUserSeriesResponse.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-FundraiserInfoResponse.html"><abbr title="\InstagramAPI\Response\FundraiserInfoResponse">FundraiserInfoResponse</abbr></a></dt>
+                <dd>FundraiserInfoResponse.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-GetPostLiveThumbnailsResponse.html"><abbr title="\InstagramAPI\Response\GetPostLiveThumbnailsResponse">GetPostLiveThumbnailsResponse</abbr></a></dt>
+                <dd>GetPostLiveThumbnailsResponse.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-CreateSerieResponse.html"><abbr title="\InstagramAPI\Response\CreateSerieResponse">CreateSerieResponse</abbr></a></dt>
+                <dd>CreateSerieResponse.</dd>
             
                     </dl>
     
