--- a/documentation/packages/default.html
+++ b/documentation/packages/default.html
@@ -1462,6 +1462,14 @@ because of too many requests. You must slow yourself down!</dd>
                 <dd>Functions related to Reels also known internally as clips.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-UserReelsResponse.html"><abbr title="\InstagramAPI\Response\UserReelsResponse">UserReelsResponse</abbr></a></dt>
                 <dd>UserReelsResponse.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-AllUserSeriesResponse.html"><abbr title="\InstagramAPI\Response\AllUserSeriesResponse">AllUserSeriesResponse</abbr></a></dt>
+                <dd>AllUserSeriesResponse.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-FundraiserInfoResponse.html"><abbr title="\InstagramAPI\Response\FundraiserInfoResponse">FundraiserInfoResponse</abbr></a></dt>
+                <dd>FundraiserInfoResponse.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-GetPostLiveThumbnailsResponse.html"><abbr title="\InstagramAPI\Response\GetPostLiveThumbnailsResponse">GetPostLiveThumbnailsResponse</abbr></a></dt>
+                <dd>GetPostLiveThumbnailsResponse.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-CreateSerieResponse.html"><abbr title="\InstagramAPI\Response\CreateSerieResponse">CreateSerieResponse</abbr></a></dt>
+                <dd>CreateSerieResponse.</dd>
             
                             <dt><a href="../classes/InstagramAPI-React-PersistentTrait.html"><abbr title="\InstagramAPI\React\PersistentTrait">PersistentTrait</abbr></a></dt>
                 <dd></dd>
