--- a/documentation/indices/files.html
+++ b/documentation/indices/files.html
@@ -193,8 +193,8 @@
                     <li><a href="../files/src-response-model-closefriends.html"><abbr title="src/Response/Model/CloseFriends.php">CloseFriends.php</abbr></a></li>
                     <li><a href="../files/src-response-closefriendsresponse.html"><abbr title="src/Response/CloseFriendsResponse.php">CloseFriendsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-cluster.html"><abbr title="src/Response/Model/Cluster.php">Cluster.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-collection.html"><abbr title="src/Response/Model/Collection.php">Collection.php</abbr></a></li>
                     <li><a href="../files/src-response-model-bloks-collection.html"><abbr title="src/Response/Model/Bloks/Collection.php">Collection.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-collection.html"><abbr title="src/Response/Model/Collection.php">Collection.php</abbr></a></li>
                     <li><a href="../files/src-request-collection.html"><abbr title="src/Request/Collection.php">Collection.php</abbr></a></li>
                     <li><a href="../files/src-response-collectionfeedresponse.html"><abbr title="src/Response/CollectionFeedResponse.php">CollectionFeedResponse.php</abbr></a></li>
                     <li><a href="../files/src-realtime-commandinterface.html"><abbr title="src/Realtime/CommandInterface.php">CommandInterface.php</abbr></a></li>
@@ -231,8 +231,8 @@
                     <li><a href="../files/src-response-createhighlightresponse.html"><abbr title="src/Response/CreateHighlightResponse.php">CreateHighlightResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-createliveresponse.html"><abbr title="src/Response/CreateLiveResponse.php">CreateLiveResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-createserieresponse.html"><abbr title="src/Response/CreateSerieResponse.php">CreateSerieResponse.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-creative.html"><abbr title="src/Response/Model/Creative.php">Creative.php</abbr></a></li>
                     <li><a href="../files/src-request-creative.html"><abbr title="src/Request/Creative.php">Creative.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-creative.html"><abbr title="src/Response/Model/Creative.php">Creative.php</abbr></a></li>
                 </ul>
                                     <h3>D</h3>
         <ul class="phpdocumentor-list">
@@ -372,8 +372,8 @@
         <ul class="phpdocumentor-list">
                     <li><a href="../files/src-realtime-handler-handlerexception.html"><abbr title="src/Realtime/Handler/HandlerException.php">HandlerException.php</abbr></a></li>
                     <li><a href="../files/src-realtime-handlerinterface.html"><abbr title="src/Realtime/HandlerInterface.php">HandlerInterface.php</abbr></a></li>
-                    <li><a href="../files/src-request-hashtag.html"><abbr title="src/Request/Hashtag.php">Hashtag.php</abbr></a></li>
                     <li><a href="../files/src-response-model-hashtag.html"><abbr title="src/Response/Model/Hashtag.php">Hashtag.php</abbr></a></li>
+                    <li><a href="../files/src-request-hashtag.html"><abbr title="src/Request/Hashtag.php">Hashtag.php</abbr></a></li>
                     <li><a href="../files/src-response-model-hashtagfollow.html"><abbr title="src/Response/Model/HashtagFollow.php">HashtagFollow.php</abbr></a></li>
                     <li><a href="../files/src-response-hashtagsresponse.html"><abbr title="src/Response/HashtagsResponse.php">HashtagsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-headline.html"><abbr title="src/Response/Model/Headline.php">Headline.php</abbr></a></li>
@@ -460,8 +460,8 @@
         <ul class="phpdocumentor-list">
                     <li><a href="../files/src-realtime-command-direct-markseen.html"><abbr title="src/Realtime/Command/Direct/MarkSeen.php">MarkSeen.php</abbr></a></li>
                     <li><a href="../files/src-response-model-megraphdata.html"><abbr title="src/Response/Model/MeGraphData.php">MeGraphData.php</abbr></a></li>
-                    <li><a href="../files/src-request-media.html"><abbr title="src/Request/Media.php">Media.php</abbr></a></li>
                     <li><a href="../files/src-response-model-media.html"><abbr title="src/Response/Model/Media.php">Media.php</abbr></a></li>
+                    <li><a href="../files/src-request-media.html"><abbr title="src/Request/Media.php">Media.php</abbr></a></li>
                     <li><a href="../files/src-response-mediacommentrepliesresponse.html"><abbr title="src/Response/MediaCommentRepliesResponse.php">MediaCommentRepliesResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-mediacommentsresponse.html"><abbr title="src/Response/MediaCommentsResponse.php">MediaCommentsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-mediacroppinginfo.html"><abbr title="src/Response/Model/MediaCroppingInfo.php">MediaCroppingInfo.php</abbr></a></li>
@@ -555,6 +555,8 @@
                     <li><a href="../files/src-response-pushpreferencesresponse.html"><abbr title="src/Response/PushPreferencesResponse.php">PushPreferencesResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-pushregisterresponse.html"><abbr title="src/Response/PushRegisterResponse.php">PushRegisterResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-pushsettings.html"><abbr title="src/Response/Model/PushSettings.php">PushSettings.php</abbr></a></li>
+                    <li><a href="../files/src-media-pdq-pdqhash.html"><abbr title="src/Media/PDQ/pdqhash.php">pdqhash.php</abbr></a></li>
+                    <li><a href="../files/src-media-pdq-pdqhasher.html"><abbr title="src/Media/PDQ/pdqhasher.php">pdqhasher.php</abbr></a></li>
                 </ul>
                                     <h3>Q</h3>
         <ul class="phpdocumentor-list">
@@ -586,8 +588,8 @@
                     <li><a href="../files/src-response-recoveryresponse.html"><abbr title="src/Response/RecoveryResponse.php">RecoveryResponse.php</abbr></a></li>
                     <li><a href="../files/src-media-geometry-rectangle.html"><abbr title="src/Media/Geometry/Rectangle.php">Rectangle.php</abbr></a></li>
                     <li><a href="../files/src-settings-storage-redis.html"><abbr title="src/Settings/Storage/Redis.php">Redis.php</abbr></a></li>
-                    <li><a href="../files/src-request-reel.html"><abbr title="src/Request/Reel.php">Reel.php</abbr></a></li>
                     <li><a href="../files/src-response-model-reel.html"><abbr title="src/Response/Model/Reel.php">Reel.php</abbr></a></li>
+                    <li><a href="../files/src-request-reel.html"><abbr title="src/Request/Reel.php">Reel.php</abbr></a></li>
                     <li><a href="../files/src-response-reelmediaviewerresponse.html"><abbr title="src/Response/ReelMediaViewerResponse.php">ReelMediaViewerResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-reelmention.html"><abbr title="src/Response/Model/ReelMention.php">ReelMention.php</abbr></a></li>
                     <li><a href="../files/src-response-reelsettingsresponse.html"><abbr title="src/Response/ReelSettingsResponse.php">ReelSettingsResponse.php</abbr></a></li>
@@ -674,8 +676,8 @@
                     <li><a href="../files/src-settings-storageinterface.html"><abbr title="src/Settings/StorageInterface.php">StorageInterface.php</abbr></a></li>
                     <li><a href="../files/src-response-model-stories.html"><abbr title="src/Response/Model/Stories.php">Stories.php</abbr></a></li>
                     <li><a href="../files/src-response-model-storiesnetego.html"><abbr title="src/Response/Model/StoriesNetego.php">StoriesNetego.php</abbr></a></li>
-                    <li><a href="../files/src-request-story.html"><abbr title="src/Request/Story.php">Story.php</abbr></a></li>
                     <li><a href="../files/src-response-model-story.html"><abbr title="src/Response/Model/Story.php">Story.php</abbr></a></li>
+                    <li><a href="../files/src-request-story.html"><abbr title="src/Request/Story.php">Story.php</abbr></a></li>
                     <li><a href="../files/src-response-storyanswersresponse.html"><abbr title="src/Response/StoryAnswersResponse.php">StoryAnswersResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-storyappattribution.html"><abbr title="src/Response/Model/StoryAppAttribution.php">StoryAppAttribution.php</abbr></a></li>
                     <li><a href="../files/src-response-storycharitiesresponse.html"><abbr title="src/Response/StoryCharitiesResponse.php">StoryCharitiesResponse.php</abbr></a></li>
@@ -739,8 +741,8 @@
                     <li><a href="../files/src-response-tagsstoryresponse.html"><abbr title="src/Response/TagsStoryResponse.php">TagsStoryResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-tallies.html"><abbr title="src/Response/Model/Tallies.php">Tallies.php</abbr></a></li>
                     <li><a href="../files/src-response-model-template.html"><abbr title="src/Response/Model/Template.php">Template.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-text.html"><abbr title="src/Response/Model/Text.php">Text.php</abbr></a></li>
                     <li><a href="../files/src-response-model-bloks-text.html"><abbr title="src/Response/Model/Bloks/Text.php">Text.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-text.html"><abbr title="src/Response/Model/Text.php">Text.php</abbr></a></li>
                     <li><a href="../files/src-response-model-bloks-textthemedcolor.html"><abbr title="src/Response/Model/Bloks/TextThemedColor.php">TextThemedColor.php</abbr></a></li>
                     <li><a href="../files/src-response-model-bloks-themedcolor.html"><abbr title="src/Response/Model/Bloks/ThemedColor.php">ThemedColor.php</abbr></a></li>
                     <li><a href="../files/src-response-model-thread.html"><abbr title="src/Response/Model/Thread.php">Thread.php</abbr></a></li>
@@ -792,8 +794,8 @@
                     <li><a href="../files/src-response-model-unpredictablekeys-userunpredictablecontainer.html"><abbr title="src/Response/Model/UnpredictableKeys/UserUnpredictableContainer.php">UserUnpredictableContainer.php</abbr></a></li>
                     <li><a href="../files/src-response-usernamesuggestionsresponse.html"><abbr title="src/Response/UsernameSuggestionsResponse.php">UsernameSuggestionsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-userslookupresponse.html"><abbr title="src/Response/UsersLookupResponse.php">UsersLookupResponse.php</abbr></a></li>
-                    <li><a href="../files/src-request-usertag.html"><abbr title="src/Request/Usertag.php">Usertag.php</abbr></a></li>
                     <li><a href="../files/src-response-model-usertag.html"><abbr title="src/Response/Model/Usertag.php">Usertag.php</abbr></a></li>
+                    <li><a href="../files/src-request-usertag.html"><abbr title="src/Request/Usertag.php">Usertag.php</abbr></a></li>
                     <li><a href="../files/src-response-usertagsresponse.html"><abbr title="src/Response/UsertagsResponse.php">UsertagsResponse.php</abbr></a></li>
                     <li><a href="../files/src-utils.html"><abbr title="src/Utils.php">Utils.php</abbr></a></li>
                 </ul>
