--- a/documentation/packages/default.html
+++ b/documentation/packages/default.html
@@ -1470,11 +1470,11 @@ because of too many requests. You must slow yourself down!</dd>
                 <dd>GetPostLiveThumbnailsResponse.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-CreateSerieResponse.html"><abbr title="\InstagramAPI\Response\CreateSerieResponse">CreateSerieResponse</abbr></a></dt>
                 <dd>CreateSerieResponse.</dd>
-                            <dt><a href="../classes/PDQHash.html"><abbr title="\PDQHash">PDQHash</abbr></a></dt>
+                            <dt><a href="../classes/InstagramAPI-Media-PDQ-PDQHash.html"><abbr title="\InstagramAPI\Media\PDQ\PDQHash">PDQHash</abbr></a></dt>
                 <dd>A PDQ hash is simply 256 bits. The only string representation is 64 hex
 digits. Bit-ordering is a concern, but is a non-issue as long as the
 to-string and from-string methods in this class are consistent.</dd>
-                            <dt><a href="../classes/PDQHasher.html"><abbr title="\PDQHasher">PDQHasher</abbr></a></dt>
+                            <dt><a href="../classes/InstagramAPI-Media-PDQ-PDQHasher.html"><abbr title="\InstagramAPI\Media\PDQ\PDQHasher">PDQHasher</abbr></a></dt>
                 <dd></dd>
             
                             <dt><a href="../classes/InstagramAPI-React-PersistentTrait.html"><abbr title="\InstagramAPI\React\PersistentTrait">PersistentTrait</abbr></a></dt>
