--- a/documentation/files/src-media-pdq-pdqhash.html
+++ b/documentation/files/src-media-pdq-pdqhash.html
@@ -71,12 +71,12 @@
     <li><a href="../index.html">Home</a></li>
                 </ul>
 
-    <h2>pdqhash.php</h2>
+    <h2>PDQHash.php</h2>
 
             <h3>Interfaces, Classes and Traits</h3>
         <dl>
             
-                            <dt><a href="../classes/PDQHash.html"><abbr title="\PDQHash">PDQHash</abbr></a></dt>
+                            <dt><a href="../classes/InstagramAPI-Media-PDQ-PDQHash.html"><abbr title="\InstagramAPI\Media\PDQ\PDQHash">PDQHash</abbr></a></dt>
                 <dd>A PDQ hash is simply 256 bits. The only string representation is 64 hex
 digits. Bit-ordering is a concern, but is a non-issue as long as the
 to-string and from-string methods in this class are consistent.</dd>
