--- a/documentation/files/src-media-pdq-pdqhasher.html
+++ b/documentation/files/src-media-pdq-pdqhasher.html
@@ -71,12 +71,12 @@
     <li><a href="../index.html">Home</a></li>
                 </ul>
 
-    <h2>pdqhasher.php</h2>
+    <h2>PDQHasher.php</h2>
 
             <h3>Interfaces, Classes and Traits</h3>
         <dl>
             
-                            <dt><a href="../classes/PDQHasher.html"><abbr title="\PDQHasher">PDQHasher</abbr></a></dt>
+                            <dt><a href="../classes/InstagramAPI-Media-PDQ-PDQHasher.html"><abbr title="\InstagramAPI\Media\PDQ\PDQHasher">PDQHasher</abbr></a></dt>
                 <dd></dd>
             
                     </dl>
