--- a/documentation/classes/InstagramAPI-Constants.html
+++ b/documentation/classes/InstagramAPI-Constants.html
@@ -369,6 +369,11 @@
                     <td class="phpdocumentor-cell">[&#039;FOLLOWERS_SHARE&#039; =&gt; 0, &#039;DIRECT_SHARE&#039; =&gt; 1, &#039;REEL_SHARE&#039; =&gt; 2, &#039;DIRECT_STORY_SHARE&#039; =&gt; 3, &#039;DIRECT_STORY_SHARE_DRAFT&#039; =&gt; 4, &#039;REEL_SHARE_AND_DIRECT_STORY_SHARE&#039; =&gt; 5, &#039;NAMETAG_SELFIE&#039; =&gt; 6, &#039;UNKNOWN&#039; =&gt; 7, &#039;IGTV&#039; =&gt; 8, &#039;IGTV_REACTION&#039; =&gt; 9, &#039;COWATCH_LOCAL&#039; =&gt; 10, &#039;GROUP_REEL_SHARE&#039; =&gt; 11, &#039;ARCHIVE&#039; =&gt; 12, &#039;CLIPS&#039; =&gt; 13, &#039;POST_LIVE_IGTV&#039; =&gt; 14, &#039;POST_LIVE_IGTV_COVER_PHOTO&#039; =&gt; 15, &#039;IGWB_SELFIE_CAPTCHA&#039; =&gt; 16, &#039;IGWB_ID_CAPTCHA&#039; =&gt; 17, &#039;EFFECT_DEMO_VIDEO&#039; =&gt; 18, &#039;INVALID&#039; =&gt; 19]</td>
                 </tr>
                             <tr>
+                    <th class="phpdocumentor-heading"><a href="../classes/InstagramAPI-Constants.html#constant_PDQ_VIDEO_TIME_FRAMES">PDQ_VIDEO_TIME_FRAMES</a></th>
+                    <td class="phpdocumentor-cell"></td>
+                    <td class="phpdocumentor-cell">[0, 1.0, 2.0, 3.0]</td>
+                </tr>
+                            <tr>
                     <th class="phpdocumentor-heading"><a href="../classes/InstagramAPI-Constants.html#constant_SRC_DIR">SRC_DIR</a></th>
                     <td class="phpdocumentor-cell"></td>
                     <td class="phpdocumentor-cell">__DIR__</td>
@@ -1609,6 +1614,28 @@
     </code>
             
 </article>
+                                    <a id="constant_PDQ_VIDEO_TIME_FRAMES"></a>
+<article
+        class="
+            phpdocumentor-element
+            phpdocumentor-constant
+            phpdocumentor-constant--public
+                    "
+>
+    <h4 class="phpdocumentor-constant__name">PDQ_VIDEO_TIME_FRAMES</h4>
+    <aside class="phpdocumentor-element-found-in">
+        <abbr class="phpdocumentor-element-found-in__file" title="src/Constants.php"><a href="../files/src-constants.html"><abbr title="src/Constants.php">Constants.php</abbr></a></abbr>
+        :
+        <span class="phpdocumentor-element-found-in__line">136</span>
+    </aside>
+        <code class="phpdocumentor-signature phpdocumentor-code ">
+        <span class="phpdocumentor-signature__visibility">public</span>
+        <span class="phpdocumentor-signature__type">mixed</span>
+        <span class="phpdocumentor-signature__name">$PDQ_VIDEO_TIME_FRAMES</span>
+        = <span class="phpdocumentor-signature__default-value">[0, 1.0, 2.0, 3.0]</span>
+    </code>
+            
+</article>
                                     <a id="constant_SRC_DIR"></a>
 <article
         class="
@@ -1621,7 +1648,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Constants.php"><a href="../files/src-constants.html"><abbr title="src/Constants.php">Constants.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">136</span>
+        <span class="phpdocumentor-element-found-in__line">144</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
