--- a/documentation/classes/InstagramAPI-Request-Internal.html
+++ b/documentation/classes/InstagramAPI-Request-Internal.html
@@ -319,7 +319,7 @@
                 </tr>
                             <tr>
                     <th class="phpdocumentor-heading"><a href="../classes/InstagramAPI-Request-Internal.html#method_updateMediaWithPdqHashes">updateMediaWithPdqHashes()</a></th>
-                    <td class="phpdocumentor-cell">Send consent policy to Instagram.</td>
+                    <td class="phpdocumentor-cell">Update media with PDQ hash info.</td>
                     <td class="phpdocumentor-cell"><a href="../classes/InstagramAPI-Response-GenericResponse.html"><abbr title="\InstagramAPI\Response\GenericResponse">GenericResponse</abbr></a></td>
                 </tr>
                             <tr>
@@ -2865,7 +2865,7 @@ media Items.</p></section></dd>
         :
         <span class="phpdocumentor-element-found-in__line">1988</span>
     </aside>
-        <p class="phpdocumentor-summary">Send consent policy to Instagram.</p>
+        <p class="phpdocumentor-summary">Update media with PDQ hash info.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
                                 <span class="phpdocumentor-signature__name">updateMediaWithPdqHashes</span>(
